<resources>
    <string name="app_name">Smart Water Management App</string>
    <string name="next1">NEXT</string>
    <string name="enter_uid">Enter Username</string>
    <string name="enter_id">Enter ID</string>
    <string name="pass">Enter password</string>
    <string name="cp">Confirm Password</string>
    <string name="sub">Submit</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">password</string>
    <string name="rv">bill</string>
    <string name="uid">Userid</string>
    <string name="due">Due Date</string>
    <string name="Date">28/03/2023</string>

    <string name="signup">SIGNUP</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="imdg">TODO</string>
    <string name="welcome_to_swma">WELCOME</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO3</string>
    <string name="title_activity_dashboard1">Dashboard1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bill">Show Bill</string>
    <string name="pay">Pay</string>
    <string name="msg">Your Bill</string>
</resources>