<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B6F8F1"
    tools:context=".start">

    <Button
        android:id="@+id/button"
        android:layout_width="185dp"
        android:layout_height="54dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="98dp"
        android:contentDescription="@string/app_name"
        android:text="@string/signup"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="185dp"
        android:layout_height="54dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="374dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="412dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_to_swma"
        android:textColor="#4B0BBC"
        android:textSize="34sp"
        android:typeface="sans"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

</androidx.constraintlayout.widget.ConstraintLayout>