<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adpass">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#B6F8F1">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:text="@string/pass"
                android:textColor="#4B0BBC"
                android:textSize="34sp"
                android:layout_marginTop="60dp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/editTextTextPassword4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:text="@string/cp"
                android:textColor="#4B0BBC"
                android:textSize="34sp"
                android:layout_marginTop="30dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextTextPassword8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="100dp"
                android:text="@string/sub" />


        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>